[project]
name = "mtserver"
version = "0.1.0"
description = "fastapi server to query prices and send orders via metatrader 5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "MetaTrader5>=5.0.0",
]
